# ConfigAPI

./: .coverage  .gitignore  app.toml  build.sh  codecov.yml  coverage.xml  junit.xml  pyproject.toml  requirements-prod.txt  requirements-test.txt  requirements.txt  run_config_test.py  setup.cfg
.github/workflows/: python-app.yml  unit-tests.yml
app/: config.py  defaults-config.toml
configapi/: __init__.py  api.py  configs.py  manager.py  patcher.py  platform.py  scope.py  sources.py
configfiles/: __init__.py  manager.py  patcher.py  toml.py
configfiles/view/: dotindex.py
configs/: __init__.py  container.py  dotindex.py  manager.py  patcher.py  sources.py
tests/: test_api.py  test_configs.py  test_manager.py  test_patcher.py  test_platform.py  test_scope.py  test_sources.py  test_toml.py
tests/files/: example-defaults.txt  package-resource-configs.toml
tests/view/: test_dotindex.py
