[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "configapi"
requires-python = ">=3.8"
dependencies = [
    "tomli",
    "tomli_w",
    "packaging",
    "platformdirs",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "configapi.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["configapi"]
namespaces = false

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pyfakefs",
]

[tool.pytest.ini_options]
addopts = "--cov=configapi --cov-report html:coverage"
testpaths = ["tests"]

# [tool.distutils.bdist_wheel]
# universal = true
