[metadata]
name = configapi
version = attr: configapi.__version__

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = configapi
test_suite = tests
install_requires = file: requirements.txt

[options.extras_require]
platform = file: requirements-platform.txt
test = file: requirements-test.txt

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
